<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/superheroImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/image_superhero"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@id/cd_image"
                app:layout_constraintStart_toStartOf="@id/cd_image"
                app:layout_constraintTop_toTopOf="@id/cd_image" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_name"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#80000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd_image"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/superheroName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:textSize="64sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="@font/amazdoomotuline"
                android:contentDescription="@string/nama_superhero"
                android:text="@string/nama_superhero"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/cd_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cd_bio"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#80000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd_name"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/biography"
                android:textColor="@color/white"
                android:fontFamily="@font/amazdoom"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="44sp"/>
            <TextView
                android:id="@+id/superheroBiography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titania"
                android:contentDescription="@string/isi_data_biography_superhero"
                android:text="@string/isi_data_biography_superhero"
                android:layout_marginTop="60dp"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="16dp"
                android:textSize="12sp"
                android:textColor="@color/white"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cd_power"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#80000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd_bio"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/powerstats"
                android:fontFamily="@font/amazdoom"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="44sp"/>
            <TextView
                android:id="@+id/superheroDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="65dp"
                android:fontFamily="@font/titania"
                android:contentDescription="@string/isi_data_powerstats_superhero"
                android:text="@string/isi_data_powerstats_superhero"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/cd_bio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/kelas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/pemandro"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/titania"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/cd_power"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/titania"
            android:text="@string/nama"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/kelas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
